--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="tentang">
             <div class="content-tentang">
                 <div class="foto-tentang">
-                    <img src="photo.jpg" width="95%" style="border-radius: 20px">
+                    <img src="foto.jpg" width="95%" style="border-radius: 20px">
                 </div>
 
                 <div class="isi-tentang">
